crates/service/tests/completion/snapshots/features__completion__param__after_paren.snap
---
source: crates/service/tests/completion/param.rs
expression: response
---
[
  {
    "label": "ref",
    "kind": 14
  }
]
