crates/service/tests/completion/snapshots/features__completion__param__ref_type.snap
---
source: crates/service/tests/completion/param.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 19
        },
        "end": {
          "line": 2,
          "character": 20
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "null",
    "kind": 14
  },
  {
    "label": "any",
    "kind": 7
  },
  {
    "label": "eq",
    "kind": 7
  },
  {
    "label": "i31",
    "kind": 7
  },
  {
    "label": "struct",
    "kind": 7
  },
  {
    "label": "array",
    "kind": 7
  },
  {
    "label": "none",
    "kind": 7
  },
  {
    "label": "func",
    "kind": 7
  },
  {
    "label": "nofunc",
    "kind": 7
  },
  {
    "label": "extern",
    "kind": 7
  },
  {
    "label": "noextern",
    "kind": 7
  }
]
