crates/service/tests/completion/snapshots/features__completion__param__type_def_with_inlined.snap
---
source: crates/service/tests/completion/param.rs
expression: response
---
[
  {
    "label": "$c",
    "labelDetails": {
      "description": "i64"
    },
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 15
        },
        "end": {
          "line": 4,
          "character": 16
        }
      },
      "newText": "$c"
    }
  }
]
