crates/service/tests/completion/snapshots/features__completion__param__types.snap
---
source: crates/service/tests/completion/param.rs
expression: response
---
[
  {
    "label": "i32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i32` classifies 32 bit integers."
    }
  },
  {
    "label": "i64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i64` classifies 64 bit integers."
    }
  },
  {
    "label": "f32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `f32` classifies 32 bit floating-point data."
    }
  },
  {
    "label": "f64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `f64` classifies 64 bit floating-point data."
    }
  },
  {
    "label": "v128",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `v128` corresponds to a 128 bit vector of packed integer or floating-point data."
    }
  },
  {
    "label": "funcref",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type [`funcref`](https://webassembly.github.io/spec/core/syntax/types.html#syntax-reftype) denotes the infinite union of all references to [functions](https://webassembly.github.io/spec/core/syntax/modules.html#syntax-func), regardless of their [function types](https://webassembly.github.io/spec/core/syntax/types.html#syntax-functype)."
    }
  },
  {
    "label": "externref",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type [`externref`](https://webassembly.github.io/spec/core/syntax/types.html#syntax-reftype) denotes the infinite union of all references to objects owned by the [embedder](https://webassembly.github.io/spec/core/intro/overview.html#embedder) and that can be passed into WebAssembly under this type."
    }
  }
]
